added more icons to the website

--- a/campaign.html
+++ b/campaign.html
@@ -210,8 +210,8 @@
                                 <h3 class="h3">Poverty Eradication Campaign </h3>
 
                                 <h5>
-                                    <i class="fas fa-time"></i>8:00 am - 12:30 pm
-                                    <i class="fas fa-map-marker"></i>Lagos State, Nigeria
+                                    <i class="fa-solid fa-clock"></i>&nbsp; &nbsp; 8:00 am - 12:30 pm &nbsp; &nbsp;
+                                    <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp; Lagos State, Nigeria
                                 </h5>
 
                                 <p>Poverty as we all know is a bad state in the life of any Man. The Lord inspired us in
@@ -231,8 +231,8 @@
                                 <h3 class="h3">Education campaign against hard Drugs</h3>
 
                                 <h5>
-                                    <i class="fas fa-time"></i>9:00 am - 4:30 pm
-                                    <i class="fas fa-map-marker"></i>Ogun State, Nigeria
+                                    <i class="fa-solid fa-clock"></i>&nbsp; &nbsp; 9:00 am - 4:30 pm &nbsp; &nbsp;
+                                    <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp; Ogun State, Nigeria
                                 </h5>
 
                                 <p>One great weapon that can be used to combat against hard drugs intake is educating the victims. That is why the Church wants to start this Campaign</p>
@@ -252,8 +252,8 @@
                                 <h3 class="h3">Educating Adolescents on Pre-marital Sex</h3>
 
                                 <h5>
-                                    <i class="fas fa-time"></i>4:00 am - 7:30 pm
-                                    <i class="fas fa-map-marker"></i>Lagos State, Nigeria
+                                    <i class="fa-solid fa-clock"></i>&nbsp; &nbsp;4:00 am - 7:30 pm &nbsp; &nbsp;
+                                    <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp; Lagos State, Nigeria
                                 </h5>
 
                                 <p>Modern society doesn't teach Students, and Adolescents about "Sex" and that is why the Church wants to take up that Job.</p>
@@ -271,8 +271,8 @@
                                 <h3 class="h3">Sensitizing the Youths on Politics</h3>
 
                                 <h5>
-                                    <i class="fas fa-time"></i>12:00 pm - 6:30 pm
-                                    <i class="fas fa-map-marker"></i>Ogun State, Nigeria
+                                    <i class="fas fa-clock"></i>&nbsp; &nbsp;12:00 pm - 6:30 pm &nbsp; &nbsp;
+                                    <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp;Ogun State, Nigeria
                                 </h5>
 
                                 <p>With everyone talking about the upcoming elections, the state of our Political system, Political apathy e.t.c. Youths need Political education</p>
