--- a/events.html
+++ b/events.html
@@ -134,13 +134,13 @@
 
                         <div class="detali-one-one">
 
-                            <p><span class="detail"> <i class="fas fa-stopper"></i> Starting Time</span>: 11:00 am -
+                            <p><span class="detail"> <i class="fas fa-clock"></i> Starting Time</span>: 11:00 am -
                                 3:00 pm</p>
-                            <p><span class="detail"> <i class="fas fa-date"></i> Event Date</span>: 31 November, 2022
+                            <p><span class="detail"> <i class="fa-solid fa-calendar-alt"></i> Event Date</span>: 31 November, 2022
                             </p>
                             <p><span class="detail"> <i class="fas fa-phone"></i> Phone Number</span>: + 234 (901)
                                 285-7304 </p>
-                            <p><span class="detail"> <i class="fas fa-map-marker"></i> Address Location</span>: 20
+                            <p><span class="detail"> <i class="fas fa-map-marker-alt"></i> Address Location</span>: 20
                                 Lagos, Nigeria</p>
 
                             
@@ -169,13 +169,13 @@
 
                         <div class="detali-one-one">
 
-                            <p><span class="detail"> <i class="fas fa-stop-watch"></i> Starting Time</span>: 8:00 am -
+                            <p><span class="detail"> <i class="fas fa-clock"></i> Starting Time</span>: 8:00 am -
                                 12:30 pm</p>
-                            <p><span class="detail"> <i class="fas fa-date"></i> Event Date</span>: 30 August, 2022
+                            <p><span class="detail"> <i class="fas fa-calendar-alt"></i> Event Date</span>: 30 August, 2022
                             </p>
                             <p><span class="detail"> <i class="fas fa-phone"></i> Phone Number</span>: + 234 (901)
                                 285-7304 </p>
-                            <p><span class="detail"> <i class="fas fa-map-marker"></i> Address Location</span>: 11
+                            <p><span class="detail"> <i class="fas fa-map-marker-alt"></i> Address Location</span>: 11
                                 Maiduguri, Nigeria</p>
                         </div>
 
@@ -203,12 +203,12 @@
 
                         <div class="detali-one-one">
 
-                            <p><span class="detail"> <i class="fas fa-stop-watch"></i> Starting Time</span>: 10:00 am - 17:30 pm</p>
-                            <p><span class="detail"> <i class="fas fa-date"></i> Event Date</span>: 14 September, 2022
+                            <p><span class="detail"> <i class="fas fa-clock"></i> Starting Time</span>: 10:00 am - 17:30 pm</p>
+                            <p><span class="detail"> <i class="fas fa-calendar-alt"></i> Event Date</span>: 14 September, 2022
                             </p>
                             <p><span class="detail"> <i class="fas fa-phone"></i> Phone Number</span>: + 234 (901)
                                 285-7304 </p>
-                            <p><span class="detail"> <i class="fas fa-map-marker"></i> Address Location</span>: 06
+                            <p><span class="detail"> <i class="fas fa-map-marker-alt"></i> Address Location</span>: 06
                                 Osogbo, Nigeria</p>
                         </div>
 
@@ -245,8 +245,8 @@
                                 <h3 class="h3">A week online Prayer for Nigeria</h3>
 
                                 <h5>
-                                    <i class="fas fa-time"></i>8:00 am - 12:30 pm
-                                    <i class="fas fa-map-marker"></i>Lagos State, Nigeria
+                                    <i class="fas fa-clock"></i>&nbsp; &nbsp; 8:00 am - 12:30 pm &nbsp; &nbsp;
+                                    <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp;Lagos State, Nigeria
                                 </h5>
 
                                 <p>No single Nigerian can deny the fact that the Country is not doing well, with the several dissapointing figures in Economy and other sectors. Join the one week Prayer</p>
@@ -264,8 +264,8 @@
                                 <h3 class="h3">Poor People's Donation Campaign</h3>
 
                                 <h5>
-                                    <i class="fas fa-time"></i>9:00 am - 4:30 pm
-                                    <i class="fas fa-map-marker"></i>Ogun State, Nigeria
+                                    <i class="fas fa-clock"></i>&nbsp; &nbsp; 9:00 am - 4:30 pm &nbsp;&nbsp;
+                                    <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp;Ogun State, Nigeria
                                 </h5>
 
                                 <p>The scripture says we should love our Neighbors just as we love ourselves. One great way to show love to your Neighbor is by giving out whatever you can afford to give.</p>
@@ -285,8 +285,8 @@
                                 <h3 class="h3">Equipping Ogun State Women with skills</h3>
 
                                 <h5>
-                                    <i class="fas fa-time"></i>11:00 am - 7:30 pm
-                                    <i class="fas fa-map-marker"></i>Lagos State, Nigeria
+                                    <i class="fas fa-clock"></i>&nbsp; &nbsp; 11:00 am - 7:30 pm &nbsp; &nbsp;
+                                    <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp; Lagos State, Nigeria
                                 </h5>
 
                                 <p>Our Church was founded in the Suburban areas of Ogun State when we we had just four Members, now the Church has grown and we will like to give back.</p>
@@ -304,8 +304,8 @@
                                 <h3 class="h3">After School program for Students</h3>
 
                                 <h5>
-                                    <i class="fas fa-time"></i>3:00 pm - 6:30 pm
-                                    <i class="fas fa-map-marker"></i>Ogun State, Nigeria
+                                    <i class="fas fa-clock"></i>&nbsp; &nbsp; 3:00 pm - 6:30 pm
+                                    <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp; Ogun State, Nigeria
                                 </h5>
 
                                 <p>"Train up a Child in the way he should grow and when he is old he will never depart from it" That's our goal in this event for vast amount of Students in both secondary and primary Schools</p>
