--- a/index.html
+++ b/index.html
@@ -609,8 +609,8 @@
                                 <h3 class="h3">Operation Feed the Borno masses</h3>
 
                                 <h5>
-                                    <i class="fas fa-time"></i>8:00 am - 12:30 pm
-                                    <i class="fas fa-map-marker"></i>Borno State, Nigeria
+                                    <i class="fas fa-clock"></i>&nbsp; &nbsp;  8:00 am - 12:30 pm &nbsp; &nbsp;
+                                    <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp;  Borno State, Nigeria
                                 </h5>
 
                                 <p>The Boko Haram was first heard of in Borno State and the People of Borno State suffer
@@ -630,8 +630,8 @@
                                 <h3 class="h3">Tackling Poverty with the Youths</h3>
 
                                 <h5>
-                                    <i class="fas fa-time"></i>12:00 pm - 6:30 pm
-                                    <i class="fas fa-map-marker"></i>Lagos State, Nigeria
+                                    <i class="fas fa-clock"></i>&nbsp; &nbsp; 12:00 pm - 6:30 pm &nbsp; &nbsp;
+                                    <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp; Lagos State, Nigeria
                                 </h5>
 
                                 <p>Poverty is everywhere in the world both in Nigeria and the external Countries. We
@@ -665,9 +665,9 @@
                                 <h2>Dean Ambrose</h2>
                                 <p>The Captain of our Charity ship definitely has to be Dean, he is everyone's favorite</p>
                                 <div class="teamSocial">
-                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a> 
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-linkedin-in"></i></a> 
                                 </div>
                             </div>
                         </li> 
@@ -678,9 +678,9 @@
                                 <h2>David Joseph</h2>
                                 <p>David is an amazing Team member and started with the Church and the Charity Team from scratch</p>
                                 <div class="teamSocial">
-                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-linkedin-in"></i></a>
                                 </div>
                             </div>
                         </li>
@@ -691,9 +691,9 @@
                                 <h2>Bunmi Sola</h2>
                                 <p>Bunmi is a very skillful Woman and with a ton of skills she possess we've been Excelling</p>
                                 <div class="teamSocial">
-                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a> 
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-linkedin-in"></i></a> 
                                 </div> 
                             </div>
                         </li>
