--- a/volunteer.html
+++ b/volunteer.html
@@ -134,9 +134,9 @@
                         <h2>Dean Ambrose</h2>
                         <p>The Captain of our Charity ship definitely has to be Dean, he is everyone's favorite</p>
                         <div class="teamSocial">
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-instagram">a</i></a>
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a> 
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-linkedin-in"></i></a> 
                         </div>
                     </div>
                 </li> 
@@ -147,9 +147,9 @@
                         <h2>David Joseph</h2>
                         <p>David is an amazing Team member and started with the Church and the Charity Team </p>
                         <div class="teamSocial">
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-linkedin-in"></i></a> 
                         </div>
                     </div>
                 </li>
@@ -160,10 +160,10 @@
                         <h2>Bunmi Sola</h2>
                         <p>Bunmi is a very skillful Woman and with a ton of skills she possess we've been Excelling</p>
                         <div class="teamSocial">
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a> 
-                        </div> 
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-linkedin-in"></i></a> 
+                        </div>
                     </div>
                 </li>
 
@@ -173,9 +173,9 @@
                         <h2>Damini Ogeva</h2>
                         <p>Ladies and gentlemen we would like to introduce you to one of the best artists</p>
                         <div class="teamSocial">
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-linkedin-in"></i></a> 
                         </div>
                     </div>
                 </li>
@@ -186,9 +186,9 @@
                         <h2>Ella Ogechi</h2>
                         <p>The Madam of the Team that ensures all Ladies are treated well and ensures equality</p>
                         <div class="teamSocial">
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a> 
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-linkedin-in"></i></a> 
                         </div> 
                     </div>
                 </li>
@@ -199,10 +199,10 @@
                         <h2>Davies Samson</h2>
                         <p>This is our one and only tech guy, he makes sure our events are a success</p>
                         <div class="teamSocial">
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a> 
-                        </div> 
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-linkedin-in"></i></a> 
+                        </div>
                     </div>
                 </li>
                 
