--- a/about.html
+++ b/about.html
@@ -152,20 +152,32 @@
                     </div>
                 </li>
                 <li class="doing-one">
-                    <i class="fas fa-book">a</i>
-                    <p>Best Education</p>
+                    <div class="things"> <br>
+                        <i class="fas fa-book"></i>
+                        <p>Best Education</p>
+                    </div>
+
                 </li>
-                <li class="doing-one">
-                    <i class="fas fa-handshake">a</i>
-                    <p>Good Health</p>
+                <li class="doing-one"> <br>
+                    <div class="things">
+                        <i class="fas fa-heart"></i>
+                        <p>Good Health</p>
+                    </div>
+
                 </li>
-                <li class="doing-one">
-                    <i class="fas fa-handshake">a</i>
-                    <p>Nutrition</p>
+                <li class="doing-one"> <br>
+                    <div class="things">
+                        <i class="fas fa-hamburger"></i>
+                        <p>Nutrition</p>
+                    </div>
+
                 </li>
-                <li class="doing-one">
-                    <i class="fas fa-handshake">a</i>
-                    <p>Clean Water</p>
+                <li class="doing-one"> <br>
+                    <div class="things">
+                        <i class="fas fa-water"></i>
+                        <p>Clean Water</p>
+                    </div>
+
                 </li>
 
             </ul>
@@ -179,6 +191,98 @@
     <!-- The what-WE-DO section for about.html ends -->
 
 
+
+
+    <!-- The Upcoming events section starts  -->
+
+    <section class="section upcomingEvents">
+        <div class="container">
+
+            <ul class="eventsCenter">
+                <li class="event1">
+
+                    <div class="dateEvent">
+                        <h2>15th <br> Sep</h2>
+                    </div> <br>
+
+                    <div class="eventTalk">
+                        <h3 class="h3">A week online Prayer for Nigeria</h3>
+
+                        <h5>
+                            <i class="fas fa-clock"></i>&nbsp; &nbsp; 8:00 am - 12:30 pm &nbsp; &nbsp;
+                            <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp;Lagos State, Nigeria
+                        </h5>
+
+                        <p>No single Nigerian can deny the fact that the Country is not doing well, with the several dissapointing figures in Economy and other sectors. Join the one week Prayer</p>
+                        <a href="./contact.html" class="btn">Join Now</a>
+                    </div>
+                </li>
+
+                <li class="event2">
+
+                    <div class="dateEvent2">
+                        <h2>28th <br> Dec</h2>
+                    </div> <br>
+
+                    <div class="eventTalk2">
+                        <h3 class="h3">Poor People's Donation Campaign</h3>
+
+                        <h5>
+                            <i class="fas fa-clock"></i>&nbsp; &nbsp; 9:00 am - 4:30 pm &nbsp;&nbsp;
+                            <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp;Ogun State, Nigeria
+                        </h5>
+
+                        <p>The scripture says we should love our Neighbors just as we love ourselves. One great way to show love to your Neighbor is by giving out whatever you can afford to give.</p>
+                        <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
+                    </div>
+                </li>
+            </ul>
+
+            <ul class="eventsCenter2">
+                <li class="event1">
+
+                    <div class="dateEvent">
+                        <h2>15th <br> Sep</h2>
+                    </div> <br>
+
+                    <div class="eventTalk">
+                        <h3 class="h3">Equipping Ogun State Women with skills</h3>
+
+                        <h5>
+                            <i class="fas fa-clock"></i>&nbsp; &nbsp; 11:00 am - 7:30 pm &nbsp; &nbsp;
+                            <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp; Lagos State, Nigeria
+                        </h5>
+
+                        <p>Our Church was founded in the Suburban areas of Ogun State when we we had just four Members, now the Church has grown and we will like to give back.</p>
+                        <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
+                    </div>
+                </li>
+
+                <li class="event2">
+
+                    <div class="dateEvent2">
+                        <h2>13th <br> Nov</h2>
+                    </div> <br>
+
+                    <div class="eventTalk2">
+                        <h3 class="h3">After School program for Students</h3>
+
+                        <h5>
+                            <i class="fas fa-clock"></i>&nbsp; &nbsp; 3:00 pm - 6:30 pm
+                            <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp; Ogun State, Nigeria
+                        </h5>
+
+                        <p>"Train up a Child in the way he should grow and when he is old he will never depart from it" That's our goal in this event for vast amount of Students in both secondary and primary Schools</p>
+                        <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
+                    </div>
+                </li>
+            </ul>
+
+        </div>
+    </section>
+
+
+    <!-- The Upcoming events section ends  -->
 
 
     <!-- The footer section starts -->
