added a new responsive section to about.html

--- a/about.html
+++ b/about.html
@@ -192,6 +192,52 @@
 
 
 
+    <!-- The mission section starts -->
+
+    <section class="mission">
+        <div class="container">
+
+            <h2 class="h2 section-title underline">Who we Are</h2>
+
+            <ul class="all-missions">
+                <li class="mission-one"> <br>
+                    <h2>A Church of the Lord</h2>
+
+                    <p>R.C.C.G Hope Of Glory Parish is a Parish under the Redeemed Christian Church of God Province 52
+                        Area 42. Just like any other Parish in the Reedeemed Christian Church of God. We will be happy
+                        to have you in our Church during our weekday Programms or @our Church center in Oke-Aro Agbado,
+                        Ogun State. Peace be unto you and your Household. Thank you for visiting our website.</p>
+                </li>
+                <li class="mission-one"><br>
+                    <h2>Help Is Our Main Goal</h2>
+
+                    <p>The scripture tells us to give to the needy, even in the Holy Quran we are told to give to the
+                        needy as much as we can afford. We the R.C.C.G Hope Of Glory Parish ensure that we give to the
+                        Poor, the less priviledged not only gifts, we also equip many youths with skills, we ensure all
+                        our Children are in Schools and not on the Road selling things during School Hours. What drives
+                        us is the Scripture and not a single person.</p>
+                </li>
+                <li class="mission-one"> <br>
+                    <h2>Our General Overseer</h2>
+
+                    <p>We have to give honor to whom honor is due that is why we made this page to talk about our
+                        Fathers that founded the Church. The Redeemed Christian Church of God was founded by our Daddy
+                        who is now resting in the bossom of the Lord, Daddy Pa. Akindayomi. Currently now our big big
+                        Daddy that is the G.O of R.C.C.G is Pastor Enoch Adejare Adeboye. Thank you for your teachings
+                        Daddy.</p>
+                </li>
+            </ul>
+
+        </div>
+    </section>
+
+
+    <!-- The mission section ends -->
+
+    
+
+
+
 
     <!-- The Upcoming events section starts  -->
 
@@ -213,7 +259,8 @@
                             <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp;Lagos State, Nigeria
                         </h5>
 
-                        <p>No single Nigerian can deny the fact that the Country is not doing well, with the several dissapointing figures in Economy and other sectors. Join the one week Prayer</p>
+                        <p>No single Nigerian can deny the fact that the Country is not doing well, with the several
+                            dissapointing figures in Economy and other sectors. Join the one week Prayer</p>
                         <a href="./contact.html" class="btn">Join Now</a>
                     </div>
                 </li>
@@ -232,7 +279,8 @@
                             <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp;Ogun State, Nigeria
                         </h5>
 
-                        <p>The scripture says we should love our Neighbors just as we love ourselves. One great way to show love to your Neighbor is by giving out whatever you can afford to give.</p>
+                        <p>The scripture says we should love our Neighbors just as we love ourselves. One great way to
+                            show love to your Neighbor is by giving out whatever you can afford to give.</p>
                         <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
                     </div>
                 </li>
@@ -253,7 +301,8 @@
                             <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp; Lagos State, Nigeria
                         </h5>
 
-                        <p>Our Church was founded in the Suburban areas of Ogun State when we we had just four Members, now the Church has grown and we will like to give back.</p>
+                        <p>Our Church was founded in the Suburban areas of Ogun State when we we had just four Members,
+                            now the Church has grown and we will like to give back.</p>
                         <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
                     </div>
                 </li>
@@ -272,7 +321,9 @@
                             <i class="fas fa-map-marker-alt"></i>&nbsp; &nbsp; Ogun State, Nigeria
                         </h5>
 
-                        <p>"Train up a Child in the way he should grow and when he is old he will never depart from it" That's our goal in this event for vast amount of Students in both secondary and primary Schools</p>
+                        <p>"Train up a Child in the way he should grow and when he is old he will never depart from it"
+                            That's our goal in this event for vast amount of Students in both secondary and primary
+                            Schools</p>
                         <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
                     </div>
                 </li>
