started contact.html page and added a wide map

--- a/contact.html
+++ b/contact.html
@@ -93,209 +93,238 @@
     <!-- The navigation section ends  -->
 
 
-    
 
-   <!-- The footer section starts -->
 
-   <footer class="footer">
+    <!-- The banner section for contact.html starts -->
 
-    <div class="footer-top section">
-        <div class="container">
 
-            <div class="footer-brand">
+    <section class="allBanner6"> <br>
+        <h2 class="bannerText">Contact Us</h2>
 
-                <a href="./index.html" class="logo">H.O.G-Parish</a>
+    </section>
 
-                <p class="text">
-                    We are the Redeemed Christian Church Of God Hope Of Glory Parish and all we just have to say is
-                    that
-                    don't let a day passby without making someone smile and happy. Always Remember "THAT JESUS
-                    LOVE'S YOU"
-                </p>
 
-                <ul class="social-list">
+    <!-- The banner section for contact.html ends -->
+
+
+
+    <!-- The wide map section starts -->
+
+    <section class="wide-Map">
+        <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247.66812192444593!2d3.3205490038016077!3d6.685275395166551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b974b4a2d0913%3A0x3f9a4146232f5f3!2sLady%20J%20Stores!5e0!3m2!1sen!2sng!4v1652890715499!5m2!1sen!2sng"
+        width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+    </section>
+
+
+
+    <!-- The wide map section ends -->
+
+
+
+    <!-- The footer section starts -->
+
+    <footer class="footer">
+
+        <div class="footer-top section">
+            <div class="container">
+
+                <div class="footer-brand">
+
+                    <a href="./index.html" class="logo">H.O.G-Parish</a>
+
+                    <p class="text">
+                        We are the Redeemed Christian Church Of God Hope Of Glory Parish and all we just have to say is
+                        that
+                        don't let a day passby without making someone smile and happy. Always Remember "THAT JESUS
+                        LOVE'S YOU"
+                    </p>
+
+                    <ul class="social-list">
+
+                        <li>
+                            <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
+                                <ion-icon name="logo-facebook">f</ion-icon>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
+                                <ion-icon name="logo-twitter">t</ion-icon>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
+                                <ion-icon name="logo-instagram">I</ion-icon>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
+                                <ion-icon name="logo-linkedin">f</ion-icon>
+                            </a>
+                        </li>
+
+                    </ul>
+
+                </div>
+
+                <ul class="footer-list">
 
                     <li>
-                        <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
-                            <ion-icon name="logo-facebook">f</ion-icon>
-                        </a>
+                        <p class="footer-list-title">Our links</p>
                     </li>
 
                     <li>
-                        <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
-                            <ion-icon name="logo-twitter">t</ion-icon>
-                        </a>
+                        <a href="./index.html" class="footer-link">Home</a>
                     </li>
 
                     <li>
-                        <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
-                            <ion-icon name="logo-instagram">I</ion-icon>
-                        </a>
+                        <a href="./events.html" class="footer-link">Events</a>
                     </li>
 
                     <li>
-                        <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
-                            <ion-icon name="logo-linkedin">f</ion-icon>
-                        </a>
+                        <a href="./campaign.html" class="footer-link">Campaigns</a>
+                    </li>
+
+                    <li>
+                        <a href="./blog.html" class="footer-link">Blog</a>
+                    </li>
+
+                    <li>
+                        <a href="./about.html" class="footer-link">About Us</a>
+                    </li>
+
+                    <li>
+                        <a href="./contact.html" class="footer-link">Contact</a>
                     </li>
 
                 </ul>
 
+                <ul class="footer-list">
+
+                    <li>
+                        <p class="footer-list-title">Church Programs</p>
+                    </li>
+
+                    <li>
+                        <a href="sms: +234-9012857304" class="footer-link">Believer's Class</a>
+                    </li>
+
+                    <li>
+                        <a href="sms: +234-9012857304" class="footer-link">House Fellowship</a>
+                    </li>
+
+                    <li>
+                        <a href="sms: +234-9012857304" class="footer-link">Campaigns</a>
+                    </li>
+
+                    <li>
+                        <a href="./volunteer.html" class="footer-link">Volunteer</a>
+                    </li>
+
+                    <li>
+                        <a href="./events.html" class="footer-link">Events</a>
+                    </li>
+
+                </ul>
+
+                <ul class="footer-list">
+
+                    <li>
+                        <p class="footer-list-title">Other links</p>
+                    </li>
+
+                    <li>
+                        <a href="#" class="footer-link">FAQ</a>
+                    </li>
+
+                    <li>
+                        <a href="./volunteer.html" class="footer-link">Portfolio</a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="footer-link">Privacy Policy</a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="footer-link">Terms & Conditions</a>
+                    </li>
+
+                    <li>
+                        <a href="./campaign.html" class="footer-link">Support</a>
+                    </li>
+
+
+
+                </ul>
+
+                <ul class="footer-list">
+
+                    <li>
+                        <p class="footer-list-title">Contact Us</p>
+                    </li>
+
+                    <li class="footer-item">
+
+                        <div class="footer-item-icon">
+                            <ion-icon name="call">C</ion-icon>
+                        </div>
+
+                        <div>
+                            <a href="tel:+234-9012857304" class="footer-item-link">+234-9012857304</a>
+                            <a href="tel:+234-8115993636" class="footer-item-link">+234-8115993636</a>
+
+                        </div>
+
+                    </li>
+
+                    <li class="footer-item">
+
+                        <div class="footer-item-icon">
+                            <ion-icon name="mail">M</ion-icon>
+                        </div>
+
+                        <div>
+                            <a href="mailto:emzzyoluwole@gmail.com" class="footer-item-link">emzzyoluwole@gmail.com</a>
+                            <a href="mailto:eoluwole217@gmail.com" class="footer-item-link">eoluwole217@gmail.com</a>
+
+                        </div>
+
+                    </li>
+
+                    <li class="footer-item">
+
+                        <div class="footer-item-icon">
+                            <ion-icon name="location">L</ion-icon>
+                        </div>
+
+                        <address class="footer-item-link">
+                            Oke-Aro, Ogun State, Federal Republic of Nigeria
+                        </address>
+
+                    </li>
+
+                </ul>
+
+
+
             </div>
-
-            <ul class="footer-list">
-
-                <li>
-                    <p class="footer-list-title">Our links</p>
-                </li>
-
-                <li>
-                    <a href="./index.html" class="footer-link">Home</a>
-                </li>
-
-                <li>
-                    <a href="./events.html" class="footer-link">Events</a>
-                </li>
-
-                <li>
-                    <a href="./campaign.html" class="footer-link">Campaigns</a>
-                </li>
-
-                <li>
-                    <a href="./blog.html" class="footer-link">Blog</a>
-                </li>
-
-                <li>
-                    <a href="./about.html" class="footer-link">About Us</a>
-                </li>
-
-                <li>
-                    <a href="./contact.html" class="footer-link">Contact</a>
-                </li>
-
-            </ul>
-
-            <ul class="footer-list">
-
-                <li>
-                    <p class="footer-list-title">Church Programs</p>
-                </li>
-
-                <li>
-                    <a href="sms: +234-9012857304" class="footer-link">Believer's Class</a>
-                </li>
-
-                <li>
-                    <a href="sms: +234-9012857304" class="footer-link">House Fellowship</a>
-                </li>
-
-                <li>
-                    <a href="sms: +234-9012857304" class="footer-link">Campaigns</a>
-                </li>
-
-                <li>
-                    <a href="./volunteer.html" class="footer-link">Volunteer</a>
-                </li>
-
-                <li>
-                    <a href="./events.html" class="footer-link">Events</a>
-                </li>
-
-            </ul>
-
-            <ul class="footer-list">
-
-                <li>
-                    <p class="footer-list-title">Other links</p>
-                </li>
-
-                <li>
-                    <a href="#" class="footer-link">FAQ</a>
-                </li>
-
-                <li>
-                    <a href="./volunteer.html" class="footer-link">Portfolio</a>
-                </li>
-
-                <li>
-                    <a href="#" class="footer-link">Privacy Policy</a>
-                </li>
-
-                <li>
-                    <a href="#" class="footer-link">Terms & Conditions</a>
-                </li>
-
-                <li>
-                    <a href="./campaign.html" class="footer-link">Support</a>
-                </li>
-
-
-
-            </ul>
-
-            <ul class="footer-list">
-
-                <li>
-                    <p class="footer-list-title">Contact Us</p>
-                </li>
-
-                <li class="footer-item">
-
-                    <div class="footer-item-icon">
-                        <ion-icon name="call">C</ion-icon>
-                    </div>
-
-                    <div>
-                        <a href="tel:+234-9012857304" class="footer-item-link">+234-9012857304</a>
-                        <a href="tel:+234-8115993636" class="footer-item-link">+234-8115993636</a>
-
-                    </div>
-
-                </li>
-
-                <li class="footer-item">
-
-                    <div class="footer-item-icon">
-                        <ion-icon name="mail">M</ion-icon>
-                    </div>
-
-                    <div>
-                        <a href="mailto:emzzyoluwole@gmail.com" class="footer-item-link">emzzyoluwole@gmail.com</a>
-                        <a href="mailto:eoluwole217@gmail.com" class="footer-item-link">eoluwole217@gmail.com</a>
-
-                    </div>
-
-                </li>
-
-                <li class="footer-item">
-
-                    <div class="footer-item-icon">
-                        <ion-icon name="location">L</ion-icon>
-                    </div>
-
-                    <address class="footer-item-link">
-                        Oke-Aro, Ogun State, Federal Republic of Nigeria
-                    </address>
-
-                </li>
-
-            </ul>
-
-
-
         </div>
-    </div>
 
-    <div class="footer-bottom">
-        <p class="copyright">
-            &copy; 2022 <a href="https://www.instagram.com/emmanuel.9944/" class="copyright-link">Emmanuel Mojiboye
-                Oluwole</a> . All Rights Reserved
-        </p>
-    </div>
+        <div class="footer-bottom">
+            <p class="copyright">
+                &copy; 2022 <a href="https://www.instagram.com/emmanuel.9944/" class="copyright-link">Emmanuel Mojiboye
+                    Oluwole</a> . All Rights Reserved
+            </p>
+        </div>
 
-</footer>
+    </footer>
 
-<!-- The footer section ends -->
+    <!-- The footer section ends -->
 
 
 
